compiler/tools/fpp-check/test/numeric_shift/shift_invalid_type_error.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/numeric_shift/shift_invalid_type_error.fpp:1.18
constant a = "x" << 2
                 ^
error: cannot compute common type of string and Integer
